--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <script src="src/interface.js"></script>
   <body>
     <section>
+  <h1>Current temperature: <span id="current-temperature">20</span></h1>
+  <select id="current-city">
+    <option value="london">London</option>
+    <option value="newyork">New York</option>
+    <option value="paris">Paris</option>
+    <option value="tokyo">Tokyo</option>
+  </select>
+</section>
+    <section>
       <h1 id="temperature"></h1>
 
       <p>
